--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
 <section id="contact">
     <h2>Contact</h2>
-    <p>Vous pouvez me contacter à l'adresse suivante : <a href="mailto:ewen@example.com">ewen@example.com</a></p>
-    <p>Ou visitez mon dépôt GitHub : <a href="https://github.com/votre-nom-utilisateur" target="_blank">Mon GitHub</a></p>
+    <p>Vous pouvez me contacter à l'adresse suivante : <a href="mailto:ewen@example.com">ewen.blin@etudiant.univ-lr.fr</a></p>
+    <p>Ou visitez mon dépôt GitHub : <a href="https://kalydragon.github.io/ewenblin.github.io" target="_blank">Mon GitHub</a></p>
 </section>
 
 <footer>
-    <p>© 2024 Ewen. Tous droits réservés.</p>
+    <p>© 2024 Ewen.BLIN Tous droits réservés.</p>
 </footer>
 
 </body>
