--- a/index.html
+++ b/index.html
@@ -3,92 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio de Ewen</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-        nav {
-            text-align: center;
-            margin-top: 1rem;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #4CAF50;
-            font-weight: bold;
-        }
-        section {
-            max-width: 800px;
-            margin: 2rem auto;
-            padding: 1rem;
-            background: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        footer {
-            text-align: center;
-            margin-top: 2rem;
-            padding: 1rem;
-            background-color: #333;
-            color: white;
-        }
-    </style>
+    <title>Portfolio - Ewen B.</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="header-content">
+            <img src="profile.jpg" alt="Photo professionnelle d'Ewen B." class="profile-photo">
+            <h1>Ewen B.</h1>
+            <p class="slogan">"Créer, Sécuriser, Innover"</p>
+        </div>
+    </header>
 
-<header>
-    <h1>Bienvenue sur mon Portfolio</h1>
-    <p>Je m'appelle Ewen et je suis étudiant en Réseaux et Télécommunications.</p>
-</header>
+    <nav>
+        <ul>
+            <li><a href="#presentation">Présentation</a></li>
+            <li><a href="#projets">Projets</a></li>
+            <li><a href="#competences">Compétences</a></li>
+            <li><a href="#parcours">Parcours</a></li>
+            <li><a href="#passions">Passions</a></li>
+            <li><a href="#contacts">Contacts</a></li>
+        </ul>
+    </nav>
 
-<nav>
-    <a href="#about">À propos</a>
-    <a href="#skills">Compétences</a>
-    <a href="#contact">Contact</a>
-</nav>
+    <main>
+        <section id="presentation">
+            <h2>Présentation</h2>
+            <p>Je suis Ewen B., étudiant en 2<sup>e</sup> année de Réseaux et Télécommunications, spécialisé en Cybersécurité. Mon objectif professionnel est de devenir un expert en sécurisation des réseaux et systèmes d'information.</p>
+        </section>
 
-<section id="about">
-    <h2>À propos de moi</h2>
-    <p>
-        Je suis actuellement en deuxième année de Bachelor Universitaire de Technologie (BUT) 
-        en Réseaux et Télécommunications, avec une spécialisation en Cybersécurité, à l'IUT de La Rochelle.
-    </p>
-    <p>
-        En plus de mes études, je suis passionné par les jeux de rôle, notamment en tant que maître de jeu 
-        pour la campagne <em>Carnaval de Sorcelume</em> dans Donjons et Dragons.
-    </p>
-</section>
+        <section id="projets">
+            <h2>Projets</h2>
+            <h3>Projets académiques</h3>
+            <ul>
+                <li>
+                    <strong>Transposition en fréquence :</strong> Projet basé sur la modulation de signaux pour la transmission. Résultat : meilleure compréhension des concepts de télécommunication avancés.
+                </li>
+                <li>
+                    <strong>Sensibilisation à l’hygiène informatique :</strong> Animation d’un atelier pour promouvoir les bonnes pratiques en cybersécurité. Apprentissage : maîtrise de la vulgarisation technique.
+                </li>
+            </ul>
 
-<section id="skills">
-    <h2>Mes compétences</h2>
-    <ul>
-        <li>Gestion des systèmes d'information</li>
-        <li>Administration des réseaux</li>
-        <li>Configuration de commutateurs Cisco (VLAN, EtherChannel, DTP, STP)</li>
-        <li>Cybersécurité</li>
-    </ul>
-</section>
+            <h3>Projets personnels</h3>
+            <ul>
+                <li>
+                    <strong>Gestion d’un site web :</strong> Administration et maintenance d’un site web. Impact : renforcement de mes compétences en gestion et optimisation des systèmes.
+                </li>
+                <li>
+                    <strong>Jeu de rôle - Le Carnaval de Sorcelume :</strong> Animation et storytelling. Soft skills : créativité, gestion de groupe, leadership.
+                </li>
+            </ul>
+        </section>
 
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Vous pouvez me contacter à l'adresse suivante : <a href="mailto:ewen@example.com">ewen.blin@etudiant.univ-lr.fr</a></p>
-    <p>Ou visitez mon dépôt GitHub : <a href="https://kalydragon.github.io/ewenblin.github.io" target="_blank">Mon GitHub</a></p>
-</section>
+        <section id="competences">
+            <h2>Compétences</h2>
+            <h3>Techniques</h3>
+            <ul>
+                <li>Pentest</li>
+                <li>Administration réseau</li>
+                <li>Sécurisation de systèmes</li>
+                <li>Configuration télécom</li>
+            </ul>
 
-<footer>
-    <p>© 2024 Ewen.BLIN Tous droits réservés.</p>
-</footer>
+            <h3>Transversales</h3>
+            <ul>
+                <li>Gestion de projet</li>
+                <li>Collaboration interculturelle</li>
+                <li>Communication</li>
+            </ul>
+        </section>
 
+        <section id="parcours">
+            <h2>Parcours</h2>
+            <p>Actuellement en 2<sup>e</sup> année de Réseaux et Télécommunications (parcours Cybersécurité), j'ai également réalisé des stages en administration réseau et configuration de systèmes télécom. Mon parcours scolaire et professionnel reflète une forte passion pour la cybersécurité et les technologies de l'information.</p>
+        </section>
+
+        <section id="passions">
+            <h2>Passions</h2>
+            <p>Je pratique le Taekwondo, le baseball, la course à pied et la danse de société, qui renforcent mon esprit d'équipe et ma discipline. Mes loisirs incluent les jeux de rôle, le théâtre, et la gestion de projets narratifs, qui alimentent ma créativité et ma capacité à innover dans des environnements professionnels.</p>
+        </section>
+
+        <section id="contacts">
+            <h2>Contacts</h2>
+            <form action="#" method="post">
+                <label for="name">Nom :</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">E-mail :</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message :</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Envoyer</button>
+            </form>
+
+            <div class="social-links">
+                <a href="mailto:ewen.professionnel@example.com">E-mail</a> |
+                <a href="https://www.linkedin.com/in/ewenb">LinkedIn</a> |
+                <a href="https://github.com/ewenb">GitHub</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Ewen B. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
