--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="social-links">
                 <a href="mailto:ewen.professionnel@example.com">E-mail</a> |
                 <a href="https://www.linkedin.com/in/ewenb">LinkedIn</a> |
-                <a href="https://github.com/ewenb">GitHub</a>
+                <a href="https://kalydragon.github.io/ewenblin.github.io/#about">GitHub</a>
             </div>
         </section>
     </main>
