--- a/index.html
+++ b/index.html
@@ -150,47 +150,37 @@
             <p>Je suis Ewen B., étudiant en 2<sup>e</sup> année de Réseaux et Télécommunications, spécialisé en Cybersécurité. Mon objectif professionnel est de devenir un expert en sécurisation des réseaux et systèmes d'information.</p>
         </section>
 
-        <section id="projets">
-            <h2>Projets</h2>
-            <h3>Projets académiques</h3>
-            <ul>
-                <li>
-                    <strong>Transposition en fréquence :</strong> Projet basé sur la modulation de signaux pour la transmission. Résultat : meilleure compréhension des concepts de télécommunication avancés.
-                </li>
-                <li>
-                    <strong>Sensibilisation à l’hygiène informatique :</strong> Animation d’un atelier pour promouvoir les bonnes pratiques en cybersécurité. Apprentissage : maîtrise de la vulgarisation technique.
-                </li>
-            </ul>
+        <section>
+    <h2>1. Projet de Filming de Formation</h2>
+    <p><strong>Objectif:</strong> Ce projet visait à filmer une formation en mettant en avant <strong>l'importance des bons gestes</strong> dans le cadre d'un projet éducatif.</p>
+    <p><strong>Développement:</strong> La réalisation a impliqué l'enregistrement de séances de formation, suivies de montages vidéo pour le rendu final.</p>
+    <p><strong>Bilan:</strong> Le projet a permis de comprendre l'impact d'une <strong>présentation claire</strong> et structurée dans un contexte éducatif.</p>
+    <img src="filming.jpg" alt="Filming de Formation">
+</section>
 
-            <h3>Projets personnels</h3>
-            <ul>
-                <li>
-                    <strong>Gestion d’un site web :</strong> Administration et maintenance d’un site web. Impact : renforcement de mes compétences en gestion et optimisation des systèmes.
-                </li>
-                <li>
-                    <strong>Jeu de rôle - Le Carnaval de Sorcelume :</strong> Animation et storytelling. Soft skills : créativité, gestion de groupe, leadership.
-                </li>
-            </ul>
-        </section>
+<section>
+    <h2>2. Projet de Sensibilisation à l'Hygiène Informatique</h2>
+    <p><strong>Objectif:</strong> Ce projet a consisté à sensibiliser des utilisateurs à l'importance de l'<strong>hygiène informatique</strong> pour améliorer la sécurité des systèmes.</p>
+    <p><strong>Développement:</strong> Une série de <strong>présentations pédagogiques</strong> et d'ateliers pratiques ont été organisés, abordant des thèmes comme les <strong>mots de passe</strong>, le <strong>phishing</strong> et les <strong>mises à jour logicielles</strong>.</p>
+    <p><strong>Bilan:</strong> Une amélioration notable des habitudes de sécurité des participants a été observée grâce aux <strong>ateliers pratiques</strong> et au suivi des bonnes pratiques.</p>
+    <img src="hygiene_informatique.jpg" alt="Sensibilisation à l'Hygiène Informatique">
+</section>
 
-        <section id="competences">
-            <h2>Compétences</h2>
-            <h3>Techniques</h3>
-            <ul>
-                <li>Pentest</li>
-                <li>Administration réseau</li>
-                <li>Sécurisation de systèmes</li>
-                <li>Configuration télécom</li>
-            </ul>
+<section>
+    <h2>3. Projet de Mise en Œuvre d'un Récepteur GNSS NRTK</h2>
+    <p><strong>Objectif:</strong> Le projet a consisté à mettre en place un <strong>récepteur GNSS</strong> en mode <strong>NRTK</strong> pour une <strong>précision géospatiale accrue</strong> dans des applications de positionnement.</p>
+    <p><strong>Développement:</strong> Ce projet a impliqué une étude théorique sur le GNSS, la configuration de récepteurs en mode classique et NRTK, ainsi que la réalisation de <strong>tests pratiques</strong> pour analyser les résultats obtenus.</p>
+    <p><strong>Bilan:</strong> Une meilleure compréhension des systèmes GNSS et des différences de précision entre les modes classique et NRTK a été acquise à travers les <strong>tests pratiques</strong>.</p>
+    <img src="gnss_recepteur.jpg" alt="Récepteur GNSS en test">
+</section>
 
-            <h3>Transversales</h3>
-            <ul>
-                <li>Gestion de projet</li>
-                <li>Collaboration interculturelle</li>
-                <li>Communication</li>
-            </ul>
-        </section>
-
+<section>
+    <h2>4. Projet de Télécommunication sur la Transmission en Bande de Base</h2>
+    <p><strong>Objectif:</strong> L'objectif était d'étudier la <strong>transmission en bande de base</strong> et de démontrer les <strong>techniques de modulation</strong> et de démodulation utilisées dans ce contexte.</p>
+    <p><strong>Développement:</strong> Une série de <strong>simulations</strong> a été réalisée pour tester différentes méthodes de <strong>modulation</strong>, avec des analyses des résultats comme le <strong>taux d'erreur binaire (BER)</strong>.</p>
+    <p><strong>Bilan:</strong> Le projet a permis d’appréhender les défis pratiques liés à la <strong>gestion des erreurs</strong> et à la <strong>qualité des signaux</strong> dans des systèmes de transmission.</p>
+    <img src="transmission_bande_base.jpg" alt="Transmission en Bande de Base">
+</section>
         <section id="parcours">
             <h2>Parcours</h2>
             <p>Actuellement en 2<sup>e</sup> année de Réseaux et Télécommunications (parcours Cybersécurité), j'ai également réalisé des stages en administration réseau et configuration de systèmes télécom. Mon parcours scolaire et professionnel reflète une forte passion pour la cybersécurité et les technologies de l'information.</p>
