--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     
 </nav>		<div class="jumbotron d-flex align-items-center" style="background-image: url(img/hero-2.jpg)">
   <div class="container text-center">
-    <h1 class="display-2 mb-4">Hello, world!</h1>
+    <h1 class="display-2 mb-4">Portfolio Ewen BLIN</h1>
     <p>
-      Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.<br>Duis mollis, est non commodo luctus.
+     Bonjour, je suis étudiant en 2<sup>e</sup> année de Réseaux et Télécommunications, spécialisé en Cybersécurité. Mon objectif professionnel est de devenir un expert en sécurisation des réseaux et systèmes d'information.
     </p>
   </div>
 </div>		<section id="gtco-who-we-are" class="bg-white">
