--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <h2>Contactez-moi</h2>
                     <p>Vous pouvez me contacter via les moyens suivants :</p>
                     <ul>
-                        <li>E-mail : <a href="mailto:ewen.professionnel@example.com">ewen.professionnel@example.com</a></li>
-                        <li>LinkedIn : <a href="https://www.linkedin.com/in/ewenb" target="_blank">Mon profil LinkedIn</a></li>
-                        <li>GitHub : <a href="https://github.com/ewenb" target="_blank">Mon profil GitHub</a></li>
+                        <li>E-mail : <a href="mailto:ewen.blin@etudiant.univ-lr.fr">ewen.blin@etudiant.univ-lr.fr</a></li>
+                        <li>LinkedIn : <a href="https://www.linkedin.com/in/ewen-blin-ab394a2b4/" target="_blank">Mon profil LinkedIn</a></li>
+                        <li>GitHub : <a href="https://github.com/KalyDragon" target="_blank">Mon profil GitHub</a></li>
                     </ul>
                 </div>
             </div>
