--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p>Vous pouvez me contacter via les moyens suivants :</p>
                     <ul>
                         <li>E-mail : <a href="mailto:ewen.blin@etudiant.univ-lr.fr">ewen.blin@etudiant.univ-lr.fr</a></li>
-                        <li>LinkedIn : <a href="https://www.linkedin.com/in/ewen-blin-ab394a2b4/" target="_blank">Mon profil LinkedIn</a></li>
+                        <li>LinkedIn : <a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BFaepkkncTeSOiytuA5tIzg%3D%3D" target="_blank">Mon profil LinkedIn</a></li>
                         <li>GitHub : <a href="https://github.com/KalyDragon" target="_blank">Mon profil GitHub</a></li>
                     </ul>
                 </div>
