--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ewen B2. - Portfolio</title>
+    <title>Ewen Blin - Portfolio</title>
     
     <!-- External CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg py-4">
             <div class="container">
                 <a class="navbar-brand" href="#home">
-                    <span class="lnr lnr-user"></span> Ewen B. Portfolio
+                    <span class="lnr lnr-user"></span> Ewen Blin Portfolio
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header"
                     aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Présentation</h2>
-                    <p>Je suis Ewen B., étudiant en 2<sup>e</sup> année de Réseaux et Télécommunications, spécialisé en Cybersécurité. Mon objectif professionnel est de devenir un expert en sécurisation des réseaux et systèmes d'information.</p>
+                    <p>Je suis Ewen B, étudiant en 2<sup>e</sup> année de Réseaux et Télécommunications, spécialisé en Cybersécurité. Mon objectif professionnel est de devenir un expert en sécurisation des réseaux et systèmes d'information.</p>
                 </div>
             </div>
         </section>
@@ -98,7 +98,7 @@
             </div>
         </section>
 
-        <section id="contact" class="container py-5">
+        <section id="contact" class="container py-6">
             <div class="row">
                 <div class="col-md-12">
                     <h2>Contactez-moi</h2>
