--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ewen Blin - Portfolio</title>
+    <title>Mon Portfolio</title>
     
     <!-- External CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
@@ -20,10 +20,11 @@
 
 <body>
     <div class="boxed-page">
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg py-4">
             <div class="container">
                 <a class="navbar-brand" href="#home">
-                    <span class="lnr lnr-user"></span> Ewen Blin Portfolio
+                    <span class="lnr lnr-user"></span> Mon Portfolio
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header"
                     aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbar-nav-header">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="#home">Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#profile">Présentation</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">À Propos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -40,20 +41,23 @@
             </div>
         </nav>
 
+        <!-- Hero Section -->
         <div id="home" class="jumbotron text-center" style="background-image: url('img/hero.jpg')">
-            <h1 class="display-3">Bienvenue sur mon Portfolio</h1>
-            <p>Je suis Ewen B., étudiant en Cybersécurité et passionné par les réseaux et télécommunications.</p>
+            <h1 class="display-3">Bienvenue sur Mon Portfolio</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
         </div>
 
-        <section id="profile" class="container py-5">
+        <!-- About Section -->
+        <section id="about" class="container py-5">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Présentation</h2>
-                    <p>Je suis Ewen B, étudiant en 2<sup>e</sup> année de Réseaux et Télécommunications, spécialisé en Cybersécurité. Mon objectif professionnel est de devenir un expert en sécurisation des réseaux et systèmes d'information.</p>
+                    <h2>À Propos de Moi</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
                 </div>
             </div>
         </section>
 
+        <!-- Portfolio Section -->
         <section id="portfolio" class="bg-light py-5">
             <div class="container">
                 <h2 class="text-center mb-4">Mes Projets</h2>
@@ -61,18 +65,14 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="project">
-                            <h3>Projet de Filming de Formation</h3>
-                            <p><strong>Objectif:</strong> Filmer une formation éducative mettant en avant l'importance des bons gestes.</p>
-                            <p><strong>Développement:</strong> Enregistrement des séances et montage vidéo pour un rendu final.</p>
-                            <p><strong>Bilan:</strong> Compréhension de l'impact d'une présentation claire et structurée.</p>
+                            <h3>Projet 1</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="project">
-                            <h3>Projet de Sensibilisation à l'Hygiène Informatique</h3>
-                            <p><strong>Objectif:</strong> Sensibiliser à l'hygiène informatique pour améliorer la sécurité des systèmes.</p>
-                            <p><strong>Développement:</strong> Présentations et ateliers sur les mots de passe, le phishing, etc.</p>
-                            <p><strong>Bilan:</strong> Amélioration des habitudes de sécurité des participants.</p>
+                            <h3>Projet 2</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
                         </div>
                     </div>
                 </div>
@@ -80,33 +80,30 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="project">
-                            <h3>Projet de Mise en Œuvre d'un Récepteur GNSS NRTK</h3>
-                            <p><strong>Objectif:</strong> Mise en place d'un récepteur GNSS pour une précision géospatiale accrue.</p>
-                            <p><strong>Développement:</strong> Etude théorique et tests pratiques sur les récepteurs GNSS.</p>
-                            <p><strong>Bilan:</strong> Meilleure compréhension des systèmes GNSS et des différences de précision.</p>
+                            <h3>Projet 3</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="project">
-                            <h3>Projet de Télécommunication sur la Transmission en Bande de Base</h3>
-                            <p><strong>Objectif:</strong> Étudier la transmission en bande de base et les techniques de modulation.</p>
-                            <p><strong>Développement:</strong> Simulations et analyses du taux d'erreur binaire (BER).</p>
-                            <p><strong>Bilan:</strong> Compréhension des défis pratiques liés à la gestion des erreurs.</p>
+                            <h3>Projet 4</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- Contact Section -->
         <section id="contact" class="container py-6">
             <div class="row">
                 <div class="col-md-12">
                     <h2>Contactez-moi</h2>
-                    <p>Vous pouvez me contacter via les moyens suivants :</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
                     <ul>
-                        <li>E-mail : <a href="mailto:ewen.blin@etudiant.univ-lr.fr">ewen.blin@etudiant.univ-lr.fr</a></li>
-                        <li>LinkedIn : <a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BFaepkkncTeSOiytuA5tIzg%3D%3D" target="_blank">Mon profil LinkedIn</a></li>
-                        <li>GitHub : <a href="https://github.com/KalyDragon" target="_blank">Mon profil GitHub</a></li>
+                        <li>E-mail : <a href="mailto:example@example.com">example@example.com</a></li>
+                        <li>LinkedIn : <a href="#" target="_blank">Mon profil LinkedIn</a></li>
+                        <li>GitHub : <a href="#" target="_blank">Mon profil GitHub</a></li>
                     </ul>
                 </div>
             </div>
