--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="#home">Accueil</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">À Propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#skills">Compétences</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -42,52 +43,86 @@
         </nav>
 
         <!-- Hero Section -->
-        <div id="home" class="jumbotron text-center" style="background-image: url('img/hero.jpg')">
-            <h1 class="display-3">Bienvenue sur Mon Portfolio</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
+        <div id="home" class="jumbotron text-center" style="background-image: url('img/hero.jpg'); background-size: cover; background-position: center;">
+            <div class="overlay"></div>
+            <div class="container">
+                <h1 class="display-3">Bienvenue sur Mon Portfolio</h1>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
+                <a href="#about" class="btn btn-primary btn-lg">Découvrir</a>
+            </div>
         </div>
 
         <!-- About Section -->
         <section id="about" class="container py-5">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <h2>À Propos de Moi</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/profile.jpg" alt="Profil" class="img-fluid rounded-circle">
+                </div>
+            </div>
+        </section>
+
+        <!-- Skills Section -->
+        <section id="skills" class="bg-light py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Mes Compétences</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="skill-item text-center">
+                            <span class="lnr lnr-code"></span>
+                            <h3>Développement Web</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="skill-item text-center">
+                            <span class="lnr lnr-lock"></span>
+                            <h3>Cybersécurité</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="skill-item text-center">
+                            <span class="lnr lnr-cloud"></span>
+                            <h3>Réseaux</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- Portfolio Section -->
-        <section id="portfolio" class="bg-light py-5">
-            <div class="container">
-                <h2 class="text-center mb-4">Mes Projets</h2>
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="project">
-                            <h3>Projet 1</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="project">
-                            <h3>Projet 2</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+        <section id="portfolio" class="container py-5">
+            <h2 class="text-center mb-4">Mes Projets</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/project1.jpg" class="card-img-top" alt="Projet 1">
+                        <div class="card-body">
+                            <h3 class="card-title">Projet 1</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="project">
-                            <h3>Projet 3</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/project2.jpg" class="card-img-top" alt="Projet 2">
+                        <div class="card-body">
+                            <h3 class="card-title">Projet 2</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="project">
-                            <h3>Projet 4</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/project3.jpg" class="card-img-top" alt="Projet 3">
+                        <div class="card-body">
+                            <h3 class="card-title">Projet 3</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                     </div>
                 </div>
@@ -95,16 +130,24 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="container py-6">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Contactez-moi</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
-                    <ul>
-                        <li>E-mail : <a href="mailto:example@example.com">example@example.com</a></li>
-                        <li>LinkedIn : <a href="#" target="_blank">Mon profil LinkedIn</a></li>
-                        <li>GitHub : <a href="#" target="_blank">Mon profil GitHub</a></li>
-                    </ul>
+        <section id="contact" class="bg-light py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Contactez-moi</h2>
+                <div class="row">
+                    <div class="col-md-6 mx-auto">
+                        <form>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Votre nom" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Votre email" required>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" rows="5" placeholder="Votre message" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block">Envoyer</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
